--- a/src/components/NewExpense/NewExpense.css
+++ b/src/components/NewExpense/NewExpense.css
@@ -8,6 +8,9 @@
   text-align: center;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
 }
+.btn {
+  display: flex;
+}
 
 .new-expense button {
   font: inherit;
@@ -17,7 +20,10 @@
   background-color: #40005d;
   color: white;
   border-radius: 25rem;
-  margin-left: 28rem;
+  margin-left: 20rem;
+}
+.new-expense button:nth-child(2) {
+  margin: 10px;
 }
 
 .new-expense button:hover,
